# SimpleNote

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  deploy-website.yml  release.yml
scripts/: sync-version.js
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
website/: index.html  style.css
