[package]
name = "quickscrawl"
version = "1.0.4"
edition = "2021"

[lib]
name = "quickscrawl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "quickscrawl"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
